--- a/.github/workflows/infra.yml
+++ b/.github/workflows/infra.yml
@@ -1,4 +1,4 @@
-name: ie-bank-infra
+name: infra
 
 on: [push, workflow_dispatch]
 
@@ -46,5 +46,5 @@ jobs:
         subscriptionId: ${{ env.SUBSCRIPTION_ID_DEV }}
         resourceGroupName: ${{ env.RESOURCE_GROUP_DEV }}
         template: ./main.bicep
-        parameters: ./parameters/dev.parameters.json
+        parameters: ./dev.parameters.json
         deploymentName: ${{ env.USER_ALIAS }}
