--- a/.github/workflows/infra.yml
+++ b/.github/workflows/infra.yml
@@ -19,7 +19,7 @@ jobs:
     - name: Run Bicep linter
       run: az bicep build --file ./main.bicep
 
-  deploy-dev:
+  deploy:
 #   if: github.ref == 'refs/heads/dev'
     runs-on: ubuntu-latest
     needs: build
