--- a/.github/workflows/infra.yml
+++ b/.github/workflows/infra.yml
@@ -46,5 +46,5 @@ jobs:
         subscriptionId: ${{ env.SUBSCRIPTION_ID_DEV }}
         resourceGroupName: ${{ env.RESOURCE_GROUP_DEV }}
         template: ./main.bicep
-        parameters: ./dev.parameters.json
+        parameters: ./parameters.json
         deploymentName: ${{ env.USER_ALIAS }}
