--- a/.github/workflows/infra.yml
+++ b/.github/workflows/infra.yml
@@ -1,6 +1,10 @@
 name: infra
 
-on: [push, workflow_dispatch]
+on:
+  push:
+    branches:
+      - main
+  workflow_dispatch:
 
 env:
   RESOURCE_GROUP_DEV: aguadamillas_students_1
@@ -11,16 +15,14 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-
       # Checkout code
-    - uses: actions/checkout@main
+      - uses: actions/checkout@v2
 
       # Lint Bicep code 
-    - name: Run Bicep linter
-      run: az bicep build --file ./main.bicep
+      - name: Run Bicep linter
+        run: az bicep build --file ./main.bicep
     
   deploy:
-#   if: github.ref == 'refs/heads/dev'
     runs-on: ubuntu-latest
     needs: build
     environment:
@@ -30,21 +32,22 @@ jobs:
       ENV: dev
 
     steps:
-
       # Checkout code
-    - uses: actions/checkout@main
+      - uses: actions/checkout@v2
     
       # Log into Azure
-    - uses: azure/login@v1
-      with:
-        creds: ${{ secrets.AZURE_CREDENTIALS }}
+      - uses: azure/login@v1
+        with:
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
 
-      # Deploy Bicep file
-    - name: deploy
-      uses: azure/arm-deploy@v1
-      with:
-        subscriptionId: ${{ env.SUBSCRIPTION_ID_DEV }}
-        resourceGroupName: ${{ env.RESOURCE_GROUP_DEV }}
-        template: ./main.bicep
-        parameters: ./parameters.json
-        deploymentName: ${{ env.USER_ALIAS }}
+      # Deploy Bicep file with parameters from parameters.json
+      - name: Deploy
+        run: |
+          az deployment sub create \
+            --template-file ./main.bicep \
+            --parameters @"./parameters.json" \
+            --name ${{ env.USER_ALIAS }} \
+            --subscription ${{ env.SUBSCRIPTION_ID_DEV }} \
+            --resource-group ${{ env.RESOURCE_GROUP_DEV }}
+        env:
+          AZURE_CONFIG_DIR: ${{ github.workspace }}
