added github secret

--- a/.github/workflows/infra.yml
+++ b/.github/workflows/infra.yml
@@ -46,5 +46,5 @@ jobs:
         subscriptionId: ${{ env.SUBSCRIPTION_ID }}
         resourceGroupName: ${{ env.RESOURCE_GROUP }}
         template: ./main.bicep
-        parameters: ./parameters.json 
+        parameters: ./parameters.json DOCKER_REGISTRY_SERVER_PASSWORD=${{secrets.DOCKER_REGISTRY_SERVER_PASSWORD }}
         deploymentName: ${{ env.USER_ALIAS }}
