--- a/.github/workflows/infra.yml
+++ b/.github/workflows/infra.yml
@@ -1,50 +1,31 @@
-name: webapp
-
-on: [push, workflow_dispatch]
+name: Deploy Bicep Template
 
 env:
-  RESOURCE_GROUP: aguadamillas_students_1
-  SUBSCRIPTION_ID: e0b9cada-61bc-4b5a-bd7a-52c606726b3b
-  USER_ALIAS: maudhelen
+  DOCKER_REGISTRY_SERVER_URL = 'maudhelencontaineregistry.azurecr.io'
+on:
+  push:
+    branches:
+      - main
+  workflow_dispatch:
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
-    steps:
-
-      # Checkout code
-    - uses: actions/checkout@main
-
-      # Lint Bicep code 
-    - name: Run Bicep linter
-      run: az bicep build --file ./main.bicep
-
   deploy:
-#   if: github.ref == 'refs/heads/dev'
     runs-on: ubuntu-latest
-    needs: build
-    environment:
-      name: 'Development'
-    
-    env:
-      ENV: dev
-
     steps:
+    - name: Checkout repository
+      uses: actions/checkout@v2
 
-      # Checkout code
-    - uses: actions/checkout@main
-    
-      # Log into Azure
-    - uses: azure/login@v1
+    - name: Set up Azure CLI
+      uses: azure/login@v1
       with:
         creds: ${{ secrets.AZURE_CREDENTIALS }}
 
-      # Deploy Bicep file
-    - name: deploy
-      uses: azure/arm-deploy@v1
-      with:
-        subscriptionId: ${{ env.SUBSCRIPTION_ID }}
-        resourceGroupName: ${{ env.RESOURCE_GROUP }}
-        template: ./main.bicep
-        parameters: ./parameters.json DOCKER_REGISTRY_SERVER_PASSWORD=${{secrets.DOCKER_REGISTRY_SERVER_PASSWORD }} DOCKER_REGISTRY_SERVER_USERNAME=${{vars.DOCKER_REGISTRY_SERVER_USERNAME }}
-        deploymentName: ${{ env.USER_ALIAS }}
+    - name: Deploy Bicep template
+      run: |
+        az deployment group create \
+          --resource-group aguadamillas_students_1 \
+          --template-file ./main.bicep \
+          --parameters @main.parameters.json \
+          --parameters dockerRegistryServerUrl=${{ secrets.DOCKER_REGISTRY_SERVER_URL }} \
+          --parameters dockerRegistryServerUsername=${{ vars.DOCKER_REGISTRY_SERVER_USERNAME }} \
+          --parameters dockerRegistryServerPassword=${{ secrets.DOCKER_REGISTRY_SERVER_PASSWORD }}
