--- a/.github/workflows/infra.yml
+++ b/.github/workflows/infra.yml
@@ -1,7 +1,5 @@
 name: Deploy Bicep Template
 
-env:
-  DOCKER_REGISTRY_SERVER_URL = maudhelencontaineregistry.azurecr.io
 on:
   push:
     branches:
@@ -26,6 +24,6 @@ jobs:
           --resource-group aguadamillas_students_1 \
           --template-file ./main.bicep \
           --parameters @main.parameters.json \
-          --parameters dockerRegistryServerUrl=${{ env.DOCKER_REGISTRY_SERVER_URL }} \
+          --parameters dockerRegistryServerUrl=${{ vars.DOCKER_REGISTRY_SERVER_URL }} \
           --parameters dockerRegistryServerUsername=${{ vars.DOCKER_REGISTRY_SERVER_USERNAME }} \
           --parameters dockerRegistryServerPassword=${{ secrets.DOCKER_REGISTRY_SERVER_PASSWORD }}
