--- a/.github/workflows/infra.yml
+++ b/.github/workflows/infra.yml
@@ -23,7 +23,7 @@ jobs:
         az deployment group create \
           --resource-group aguadamillas_students_1 \
           --template-file ./main.bicep \
-          --parameters @main.parameters.json \
+          --parameters @parameters.json \
           --parameters dockerRegistryServerUrl=${{ vars.DOCKER_REGISTRY_SERVER_URL }} \
           --parameters dockerRegistryServerUsername=${{ vars.DOCKER_REGISTRY_SERVER_USERNAME }} \
           --parameters dockerRegistryServerPassword=${{ secrets.DOCKER_REGISTRY_SERVER_PASSWORD }}
