--- a/.github/workflows/infra.yml
+++ b/.github/workflows/infra.yml
@@ -1,4 +1,4 @@
-name: Deploy Bicep Template
+name: deploy-infra
 
 on:
   push:
@@ -6,24 +6,57 @@ on:
       - main
   workflow_dispatch:
 
+env:
+  RESOURCE_GROUP_DEV: aguadamillas_students_1
+  SUBSCRIPTION_ID_DEV: e0b9cada-61bc-4b5a-bd7a-52c606726b3b
+  USER_ALIAS: maudhelen
+
 jobs:
-  deploy:
+  build:
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v2
+      # Checkout code
+      - uses: actions/checkout@main
 
-    - name: Set up Azure CLI
-      uses: azure/login@v1
-      with:
-        creds: ${{ secrets.AZURE_CREDENTIALS }}
+      # Lint Bicep code
+      # - name: Run Bicep linter
+      #   run: az bicep build --file ./infra/key-vault.bicep
 
-    - name: Deploy Bicep template
-      run: |
-        az deployment group create \
-          --resource-group aguadamillas_students_1 \
-          --template-file ./main.bicep \
-          --parameters @parameters.json \
-          --parameters DOCKER_REGISTRY_SERVER_URL=${{ vars.DOCKER_REGISTRY_SERVER_URL }} \
-          --parameters DOCKER_REGISTRY_SERVER_USERNAME=${{ vars.DOCKER_REGISTRY_SERVER_USERNAME }} \
-          --parameters DOCKER_REGISTRY_SERVER_PASSWORD=${{ secrets.DOCKER_REGISTRY_SERVER_PASSWORD }}
+      # Lint Bicep code
+      - name: Run Bicep linter
+        run: az bicep build --file ./main.bicep
+
+  deploy:
+    #    if: github.ref == 'refs/heads/dev'
+    runs-on: ubuntu-latest
+    needs: build
+
+    steps:
+      - uses: actions/checkout@main
+
+      # login to Azure
+      - uses: azure/login@v1
+        with:
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
+
+      # Deploy Key Vault
+      # - name: deploy-key-vault
+      #   uses: azure/arm-deploy@v1.0.9
+      #   with:
+      #     subscriptionId: ${{ env.SUBSCRIPTION_ID_DEV }}
+      #     resourceGroupName: ${{ env.RESOURCE_GROUP_DEV }}
+      #     template: ./infra/key-vault.bicep
+      #     parameters: ./infra/parameters/key-vault.json
+      #     deploymentName: "${{ env.USER_ALIAS }}-kv"
+      #     failOnStdErr: false
+
+      # Deploy Bicep file
+      - name: deploy-main
+        uses: azure/arm-deploy@v1.0.9
+        with:
+          subscriptionId: ${{ env.SUBSCRIPTION_ID_DEV }}
+          resourceGroupName: ${{ env.RESOURCE_GROUP_DEV }}
+          template: ./main.bicep
+          parameters: ./parameters.json
+          deploymentName: ${{ env.USER_ALIAS }}
+          failOnStdErr: false
