--- a/.github/workflows/infra.yml
+++ b/.github/workflows/infra.yml
@@ -57,6 +57,6 @@ jobs:
           subscriptionId: ${{ env.SUBSCRIPTION_ID_DEV }}
           resourceGroupName: ${{ env.RESOURCE_GROUP_DEV }}
           template: ./main.bicep
-          parameters: ./parameters.json
+          parameters: ./parameters.json DOCKER_REGISTRY_SERVER_PASSWORD = ${{ secrets.DOCKER_REGISTRY_SERVER_PASSWORD }} DOCKER_REGISTRY_SERVER_URL = ${{ vars.DOCKER_REGISTRY_SERVER_URL }} DOCKER_REGISTRY_SERVER_USERNAME = ${{ vars.DOCKER_REGISTRY_SERVER_USERNAME }}
           deploymentName: ${{ env.USER_ALIAS }}
           failOnStdErr: false
