--- a/.github/workflows/infra.yml
+++ b/.github/workflows/infra.yml
@@ -10,6 +10,11 @@ env:
   RESOURCE_GROUP_DEV: aguadamillas_students_1
   SUBSCRIPTION_ID_DEV: e0b9cada-61bc-4b5a-bd7a-52c606726b3b
   USER_ALIAS: maudhelen
+  DOCKER_REGISTRY_SERVER_URL: maudhelencontaineregistry.azurecr.io
+  DOCKER_REGISTRY_SERVER_USERNAME: maudhelencontaineregistry
+  DOCKER_REGISTRY_SERVER_PASSWORD: wCrjuLGNqE3Hi0UlUQIVVT5CgzZb6ORNyBCC4w9jYT+ACRDvM5MI
+
+
 
 jobs:
   build:
@@ -57,6 +62,6 @@ jobs:
           subscriptionId: ${{ env.SUBSCRIPTION_ID_DEV }}
           resourceGroupName: ${{ env.RESOURCE_GROUP_DEV }}
           template: ./main.bicep
-          parameters: ./parameters/parameters.json DOCKER_REGISTRY_SERVER_URL = ${{ vars.DOCKER_REGISTRY_SERVER_URL }} DOCKER_REGISTRY_SERVER_USERNAME = ${{ vars.DOCKER_REGISTRY_SERVER_USERNAME }} DOCKER_REGISTRY_SERVER_PASSWORD = ${{ secrets.DOCKER_REGISTRY_SERVER_PASSWORD }}
+          parameters: ./parameters/parameters.json DOCKER_REGISTRY_SERVER_URL = ${{ env.DOCKER_REGISTRY_SERVER_URL }} DOCKER_REGISTRY_SERVER_USERNAME = ${{ env.DOCKER_REGISTRY_SERVER_USERNAME }} DOCKER_REGISTRY_SERVER_PASSWORD = ${{ env.DOCKER_REGISTRY_SERVER_PASSWORD }}
           deploymentName: ${{ env.USER_ALIAS }}
           failOnStdErr: false
