--- a/.github/workflows/infra.yml
+++ b/.github/workflows/infra.yml
@@ -62,6 +62,6 @@ jobs:
           subscriptionId: ${{ env.SUBSCRIPTION_ID_DEV }}
           resourceGroupName: ${{ env.RESOURCE_GROUP_DEV }}
           template: ./main.bicep
-          parameters: ./parameters/main.parameters.json DOCKER_REGISTRY_SERVER_URL=${{ vars.DOCKER_REGISTRY_SERVER_URL }} DOCKER_REGISTRY_SERVER_USERNAME=${{ vars.DOCKER_REGISTRY_SERVER_USERNAME }} DOCKER_REGISTRY_SERVER_PASSWORD=${{ secret.DOCKER_REGISTRY_SERVER_PASSWORD }}
+          parameters: ./parameters/main.parameters.json DOCKER_REGISTRY_SERVER_URL=${{ vars.DOCKER_REGISTRY_SERVER_URL }} DOCKER_REGISTRY_SERVER_USERNAME=${{ vars.DOCKER_REGISTRY_SERVER_USERNAME }} DOCKER_REGISTRY_SERVER_PASSWORD=${{ secrets.DOCKER_REGISTRY_SERVER_PASSWORD }}
           deploymentName: ${{ env.USER_ALIAS }}
           failOnStdErr: false
