--- a/.github/workflows/infra.yml
+++ b/.github/workflows/infra.yml
@@ -7,8 +7,8 @@ on:
   workflow_dispatch:
 
 env:
-  RESOURCE_GROUP_DEV: aguadamillas_students_1
-  SUBSCRIPTION_ID_DEV: e0b9cada-61bc-4b5a-bd7a-52c606726b3b
+  RESOURCE_GROUP: aguadamillas_students_1
+  SUBSCRIPTION_ID: e0b9cada-61bc-4b5a-bd7a-52c606726b3b
   USER_ALIAS: maudhelen
 
 
@@ -45,10 +45,10 @@ jobs:
       - name: deploy-key-vault
         uses: azure/arm-deploy@v1.0.9
         with:
-          subscriptionId: ${{ env.SUBSCRIPTION_ID_DEV }}
-          resourceGroupName: ${{ env.RESOURCE_GROUP_DEV }}
+          subscriptionId: ${{ env.SUBSCRIPTION_ID }}
+          resourceGroupName: ${{ env.RESOURCE_GROUP }}
           template: ./key-vault.bicep
-          parameters: ./parameters/key-vault.json
+          parameters: ./parameters/key-vault.json 
           deploymentName: "${{ env.USER_ALIAS }}-kv"
           failOnStdErr: false
 
@@ -56,8 +56,8 @@ jobs:
       - name: deploy-main
         uses: azure/arm-deploy@v1.0.9
         with:
-          subscriptionId: ${{ env.SUBSCRIPTION_ID_DEV }}
-          resourceGroupName: ${{ env.RESOURCE_GROUP_DEV }}
+          subscriptionId: ${{ env.SUBSCRIPTION_ID }}
+          resourceGroupName: ${{ env.RESOURCE_GROUP }}
           template: ./main.bicep
           parameters: ./parameters/main.parameters.json DOCKER_REGISTRY_SERVER_URL=${{ vars.DOCKER_REGISTRY_SERVER_URL }} DOCKER_REGISTRY_SERVER_USERNAME=${{ vars.DOCKER_REGISTRY_SERVER_USERNAME }} DOCKER_REGISTRY_SERVER_PASSWORD=${{ secrets.DOCKER_REGISTRY_SERVER_PASSWORD }}
           deploymentName: ${{ env.USER_ALIAS }}
