--- a/.github/workflows/infra.yml
+++ b/.github/workflows/infra.yml
@@ -10,6 +10,9 @@ env:
   RESOURCE_GROUP: aguadamillas_students_1
   SUBSCRIPTION_ID: e0b9cada-61bc-4b5a-bd7a-52c606726b3b
   USER_ALIAS: maudhelen
+  KEY_VAULT_SECRET_NAME_ACR_USERNAME:
+  KEY_VAULT_SECRET_NAME_ACR_PASSWORD:
+  KEY_VAULT_NAME: maudhelen-kv
 
 
 
@@ -36,6 +39,13 @@ jobs:
     steps:
       - uses: actions/checkout@main
 
+      - name: 'Get docker registry credentials from Azure Key Vault'
+        uses: azure/CLI@v1
+        with:
+          inlineScript: |
+            echo "REGISTRY_USERNAME=$(az keyvault secret show --name ${{ env.KEY_VAULT_SECRET_NAME_ACR_USERNAME }} --vault-name ${{ env.KEY_VAULT_NAME }} --query value -o tsv)" >> $GITHUB_ENV
+            echo "REGISTRY_PASSWORD=$(az keyvault secret show --name ${{ env.KEY_VAULT_SECRET_NAME_ACR_PASSWORD }} --vault-name ${{ env.KEY_VAULT_NAME }} --query value -o tsv)" >> $GITHUB_ENV
+
       # login to Azure
       - uses: azure/login@v1
         with:
@@ -59,6 +69,6 @@ jobs:
           subscriptionId: ${{ env.SUBSCRIPTION_ID }}
           resourceGroupName: ${{ env.RESOURCE_GROUP }}
           template: ./main.bicep
-          parameters: ./parameters/main.parameters.json DOCKER_REGISTRY_SERVER_URL=${{ vars.DOCKER_REGISTRY_SERVER_URL }} DOCKER_REGISTRY_SERVER_USERNAME=${{ vars.DOCKER_REGISTRY_SERVER_USERNAME }} DOCKER_REGISTRY_SERVER_PASSWORD=${{ secrets.DOCKER_REGISTRY_SERVER_PASSWORD }}
+          parameters: ./parameters/main.parameters.json
           deploymentName: ${{ env.USER_ALIAS }}
           failOnStdErr: false
