--- a/.github/workflows/infra.yml
+++ b/.github/workflows/infra.yml
@@ -10,10 +10,9 @@ env:
   RESOURCE_GROUP: aguadamillas_students_1
   SUBSCRIPTION_ID: e0b9cada-61bc-4b5a-bd7a-52c606726b3b
   USER_ALIAS: maudhelen
-  KEY_VAULT_SECRET_NAME_ACR_USERNAME:
-  KEY_VAULT_SECRET_NAME_ACR_PASSWORD:
-  KEY_VAULT_NAME: maudhelen-kv
-
+  KEY_VAULT_SECRET_NAME_ACR_USERNAME: poop
+  KEY_VAULT_SECRET_NAME_ACR_PASSWORD: poop
+  KEY_VAULT_NAME: maudhelen-keyvault
 
 
 jobs:
@@ -69,6 +68,6 @@ jobs:
           subscriptionId: ${{ env.SUBSCRIPTION_ID }}
           resourceGroupName: ${{ env.RESOURCE_GROUP }}
           template: ./main.bicep
-          parameters: ./parameters/main.parameters.json
+          parameters: ./parameters/main.parameters.json DOCKER_REGISTRY_SERVER_URL=${{ vars.DOCKER_REGISTRY_SERVER_URL }} kevVaultSecretNameACRUsername=${{ env.REGISTRY_USERNAME }} kevVaultSecretNameACRPassword1=${{ env.REGISTRY_PASSWORD }}
           deploymentName: ${{ env.USER_ALIAS }}
           failOnStdErr: false
