--- a/.github/workflows/infra.yml
+++ b/.github/workflows/infra.yml
@@ -10,8 +10,8 @@ env:
   RESOURCE_GROUP: aguadamillas_students_1
   SUBSCRIPTION_ID: e0b9cada-61bc-4b5a-bd7a-52c606726b3b
   USER_ALIAS: maudhelen
-  KEY_VAULT_SECRET_NAME_ACR_USERNAME: "kevVaultSecretNameACRUsername"
-  KEY_VAULT_SECRET_NAME_ACR_PASSWORD: "kevVaultSecretNameACRPassword1"
+  KEY_VAULT_SECRET_NAME_ACR_USERNAME: keyVaultSecretNameACRUsername
+  KEY_VAULT_SECRET_NAME_ACR_PASSWORD: keyVaultSecretNameACRPassword1
   KEY_VAULT_NAME: maudhelen-keyvault
 
 
@@ -68,6 +68,6 @@ jobs:
           subscriptionId: ${{ env.SUBSCRIPTION_ID }}
           resourceGroupName: ${{ env.RESOURCE_GROUP }}
           template: ./main.bicep
-          parameters: ./parameters/main.parameters.json DOCKER_REGISTRY_SERVER_URL=${{ secrets.DOCKER_REGISTRY_SERVER_PASSWORD }} kevVaultSecretNameACRUsername=${{ env.REGISTRY_USERNAME }} kevVaultSecretNameACRPassword1=${{ env.REGISTRY_PASSWORD }}
+          parameters: ./parameters/main.parameters.json DOCKER_REGISTRY_SERVER_URL=${{ secrets.DOCKER_REGISTRY_SERVER_PASSWORD }} keyVaultSecretNameACRUsername=${{ env.REGISTRY_USERNAME }} kevVaultSecretNameACRPassword1=${{ env.REGISTRY_PASSWORD }}
           deploymentName: ${{ env.USER_ALIAS }}
           failOnStdErr: false
